--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="previous">Previous</string>
     <string name="next">Next</string>
     <string name="intro_message">This sample demonstrates how to use PdfRenderer to display PDF documents on the screen</string>
+    <string name="rename">Rename</string>
+    <string name="delete">Delete</string>
+    <string name="ok">OK</string>
+    <string name="cancel">CANCEL</string>
+    <string name="share">Share</string>
 
 </resources>
